@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.6"
-#define RUBY_RELEASE_DATE "2007-09-07"
+#define RUBY_RELEASE_DATE "2007-09-17"
 #define RUBY_VERSION_CODE 186
-#define RUBY_RELEASE_CODE 20070907
-#define RUBY_PATCHLEVEL 101
+#define RUBY_RELEASE_CODE 20070917
+#define RUBY_PATCHLEVEL 102
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 6
 #define RUBY_RELEASE_YEAR 2007
 #define RUBY_RELEASE_MONTH 9
-#define RUBY_RELEASE_DAY 7
+#define RUBY_RELEASE_DAY 17
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
